# SnapToSign

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  converter.py  main.py  pyproject.toml  run_snaptosign.sh  run_tests.sh
.github/workflows/: air.yml  docker.yml  ruff.yml  tests.yml
docker/: snaptosign.Dockerfile
py/: cli.py  converter.py
r/: cli.R  converter.R  disc2r.R
r/tests/: run_tests.R
snaptosign/: cli.py  converter.py
src/disc_convert/: cli.py
tests/: test_exporter.py
