[project]
name = "snaptosign"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argparse>=1.4.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scanpy>=1.12",
    "scipy>=1.16.3",
]
[project.scripts]
py2disc = "src.disc_convert.cli:main"