[project]
name = "snaptosign"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "scanpy>=1.11.5",
    "snapatac2>=2.8.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
snaptosign = "snaptosign.cli:main"